removed build contents and replaced CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,4 @@
 cmake_minimum_required(VERSION 3.10)
-project(Jaba)
-add_executable(Jaba jaba.cpp)
+
+#project(Jaba)
+#add_executable(Jaba jaba.cpp)
